# embedslicer

./: .gitignore  bunny.ply  pyproject.toml  render_continuity_check.py  render_temporal_3d.py  render_temporal_slider.py
docs/superpowers/plans/: 2026-05-28-embedded-print-ear-sequencing.md
docs/superpowers/specs/: 2026-05-28-embedded-print-ear-sequencing-design.md
embedslicer/: __init__.py  gcode.py  gcode_aerotech.py  gcode_automation1.py  main.py  mesh.py  model.py  preview.py  regions.py  sequencer.py  slicer.py  smoothing.py  toolpath.py
samples/: bunny.gcode  bunny_aerotech.txt  bunny_automation1.txt  bunny_flipped.gcode  bunny_flipped_automation1.txt  bunny_sequence.txt
tests/: conftest.py  test_gcode.py  test_gcode_aerotech.py  test_gcode_automation1.py  test_integration.py  test_mesh.py  test_model.py  test_preview.py  test_regions.py  test_sequencer.py  test_slicer.py  test_smoke.py  test_smoothing.py  test_toolpath.py
