[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "embedslicer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["trimesh", "shapely", "numpy", "scipy", "rtree", "matplotlib"]

[tool.setuptools.packages.find]
include = ["embedslicer*"]
